infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: users-app-container
        image: users-api-image:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riders-deployment
spec:
  selector:
    matchLabels:
      app: riders-app
  template:
    metadata:
      labels:
        app: riders-app
    spec:
      containers:
      - name: riders-app-container
        image: riders-api-image:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
