infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  labels:
    name: sample-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: sample-ingress.com
    http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: users-service
            port: 
              number: 80
      - pathType: Prefix
        path: /riders
        backend:
          service:
            name: riders-service
            port: 
              number: 80
